--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-core:15.0.2' // https://firebase.google.com/support/release-notes/android
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.2@aar') { transitive = true } // https://docs.fabric.io/android/changelog.html
+//    implementation('com.crashlytics.sdk.android:crashlytics:2.9.2@aar') { transitive = true } // https://docs.fabric.io/android/changelog.html
     implementation 'com.github.bumptech.glide:glide:4.7.1' // https://github.com/bumptech/glide
 }
 
