--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ebnbin.floatingcamera">
+    package="com.xx.floatingcamera">
     <uses-permission
         android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission
@@ -50,7 +50,7 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.ebnbin.floatingcamera.fileprovider"
+            android:authorities="com.xx.floatingcamera.fileprovider"
             android:grantUriPermissions="true"
             android:exported="false">
             <meta-data
